@@ -44,8 +44,9 @@ class OpenIdConnect_Utils:
         if self.verbose:
             self.log_stream.debug('getting device code')
         data = {'client_id': client_id,
-                'scope': "openid profile email offline_access iam",
+                'scope': "openid profile email offline_access ",#iam",
                 'audience': audience}
+        print (data)
         rdata = urlencode(data).encode()
         req = Request(device_auth_endpoint, rdata)
         req.add_header('content-type', 'application/x-www-form-urlencoded')
